# audio_extractor

./: Cargo.toml  README.md  TESTING.md  TEST_SUMMARY.md  config.toml  run_tests.sh
benches/: audio_extraction_bench.rs
docs/: API.md  FAQ.md  IMPLEMENTATION.md
examples/: README.md  batch_convert.sh  config.toml  verify_audio.rs
src/: lib.rs  main.rs
tests/: cli_tests.rs  common.rs
