[package]
name = "audio_extractor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool for extracting and saving audio files from video files"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
symphonia = { version = "0.5", features = ["all"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "audio_extraction_bench"
harness = false
